<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobiquitous PDS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_portfolio">Portfolio</string>
    <string name="beneficiarieslist">List of Beneficiaries</string>
    <string name="beneficiaryImage">Beneficiary photo</string>
    <string name="exit">Exit !</string>
    <string name="quitconfirm">Do you really want to quit the app?</string>
    <string name="SuccessTransaction">Success</string>
    <string name="start">New Process</string>
    <string name="quit">Quit</string>
    <string name="first_logo"></string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="connectionBtn">Log in</string>
    <string name="firstname">First Name :</string>
    <string name="lastname">Last Name :</string>
    <string name="address"> Address :</string>
    <string name="phone">Phone Number :</string>
    <string name="beneficiarydetail">Beneficiary Information</string>
    <string name="nextBtn">Next</string>
    <string name="backBtn">Back</string>
    <string name="close">Close</string>
    <string name="supplyBtn">Supply</string>
    <string name="validSupplyBtn">Validate</string>
    <string name="tagImage">Image Tag</string>
    <string name="tagText">Please, put the sticker NFC on the phone back</string>
    <string name="nothingBtn">Home</string>
    <string name="familyPortfolio">Family Portfolio</string>
    <string name="gridImage">portfolio items images</string>
    <string name="portfolioDetailPrice">Price :</string>
    <string name="portfolioDetailQuantity">Quantity :</string>
    <string name="portfolioDetailreduction">Discount :</string>
    <string name="portfolioDetailDescription">Description :</string>
    <string name="supply">Supply Products</string>
    <string name="confirmTitle">Confirm Transaction</string>
    <string name="supplyQuantity">Quantity wished :</string>
    <string name="quantityRemained">Quantity remained :</string>
    <string name="portfolioEmpty">The portfolio of this family is Empty!</string>
    <string name="retry">Retry</string>
    <string name="confirm">Confirm</string>
    <string name="complete">Complete</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="tagNotSupported">Sorry! This Tag is not supported by the Application. It\'s maybe empty or unformatted.</string>
    <string name="ok">Okay</string>
    <string name="agreement">Agreement</string>
    <string name="agreement_message">by clicking Yes, you agree to the Terms of PDS and warrant that you are the author of this transaction.</string>
    <string name="data_updated">"Data update successfully!"</string>
    <string name="SelectAll">Select All</string>
    <string name="separatorPortfolio">-----------------------</string>
    <string name="space"> --- </string>
    <string name="atLeastMessage">You must choose at least one product.</string>
    <string name="information">Information</string>
    <string name="hasRunBefore">All Data have already been loaded on your mobile.</string>
    <string name="load_successfully">Load successfully done!</string>
    <string name="yes">Yes</string>
    <string name="settings">Settings</string>
    <string name="no">No</string>
    <string name="logout">Log out</string>
    <string name="warning">Alert</string>
    <string name="cancelToTag">You are about to cancel the distribution you were processing. Are you sure to cancel the process?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="load_data">load data</string>
    <string name="portfolioDetail_off_message">This product cannot be supplied. The related aid date is maybe passed or not yet allowed to be serve.</string>
    <string name="portfolioDetail_off_title">Product Off</string>
    <string name="title_activity_setup">SetupActivity</string>

</resources>