<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/portfolioTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/layout_color"
        android:gravity="center"
        android:text="@string/familyPortfolio"
        android:textSize="35sp"
        android:textColor="@color/background_color"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectAll" />

    <GridView
        android:id="@+id/gridViewPortfolio"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth" >
    </GridView>

   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backBtn"
            style="@android:style/Animation"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/backBtn" />

        <Button
            android:id="@+id/nextBtn"
            style="@android:style/Animation"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/nextBtn" />
    </LinearLayout>

</LinearLayout>