<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color" >

        <!-- Title Starts -->
        <!-- Title Ends -->


        <!-- Login Form Starts -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="10dip" >

            

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textPersonName"
                android:textColor="@color/text_color" 
                android:hint="@string/username">
            </EditText>


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_color" 
                android:hint="@string/password"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/boutonConnexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_gravity="center"
                android:text="@string/connectionBtn" 
                android:background="@drawable/button"/>
        </LinearLayout>

        <!-- Login Form Ends -->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/first_logo"
            android:src="@drawable/first_logo" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>