<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/agentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="94dp"
            android:text=""
            android:textStyle="bold" />

    </RelativeLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    

    <TextView
        android:id="@+id/confirmTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirmTitle"
        android:fontFamily=""
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="138dp"
        android:layout_height="92dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/confirm"
        android:maxHeight="150dip"
        android:maxWidth="150dip"
        android:src="@drawable/image" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listViewConfirm"
        android:layout_width="match_parent"
        android:layout_height="176dp" >
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backBtnConfirm"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/backBtn" 
            android:background="@drawable/button"
            style="@android:style/Animation"/>

        <Button
            android:id="@+id/validBtnConfirm"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/complete" 
            android:background="@drawable/button"
            style="@android:style/Animation"/>
    </LinearLayout>

</LinearLayout>