<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/supplyTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/layout_color"
        android:gravity="center"
        android:text="@string/supply"
        android:textColor="@color/background_color"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="240dp" 
        android:layout_margin="5dp">
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backBtnSupply"
            style="@android:style/Animation"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/backBtn" />

        <Button
            android:id="@+id/validBtnSupply"
            style="@android:style/Animation"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/validSupplyBtn" />
    </LinearLayout>

</LinearLayout>